# spkup

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.bat  spkup.spec
.github/workflows/: ci.yml  release.yml
docs/: 01-architecture.md  02-observability.md  03-testing.md  04-delivery-workflow.md  05-ai-agent-workflow.md  06-packaging-release.md
specs/: phase-template.issue.md  phase1.issue.md  phase2.issue.md  phase3.issue.md  phase4.issue.md  phase5.issue.md  phase6.issue.md  phase7.issue.md  phase8.issue.md  phase9.issue.md  progress.status.md  project-template.plan.md  project.plan.md
src/spkup/: __init__.py  __main__.py  app.py  autostart.py  clipboard.py  config.py  hotkey.py  logging_setup.py  model_manager.py  overlay.py  recorder.py  settings_dialog.py  transcriber.py  transcription_history.py  transcription_history_window.py
tests/: test_autostart.py  test_clipboard.py  test_config.py  test_hotkey.py  test_main.py  test_model_manager.py  test_recorder.py  test_transcriber.py  test_transcription_history.py
