[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spkup"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "pynput>=1.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest"]
build = ["PyInstaller>=6.14"]

[tool.hatch.version]
path = "src/spkup/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spkup"]
